...
    <string name="ui_save">Save</string>
    <string name="ui_delete">Delete</string>
    <string name="ui_rename">Rename</string>
    <string name="ui_rename_bookmark">Rename bookmark</string>
    <string name="ui_dismiss">Dismiss</string>
    <string name="ui_annotations">Annotations</string>
    <string name="ui_format">Format</string>
    <string name="ui_formatting">Formatting</string>
    <string name="ui_display">Display</string>
    <string name="ui_reset_to_global_defaults">Reset to global defaults</string>
    <string name="ui_search">Search</string>
    <string name="ui_search_in_book">Search in book…</string>
    <string name="ui_no_results">No results</string>
    <string name="ui_result_position">%1$d of %2$d</string>
    <string name="ui_previous_result">Previous result</string>
...
    <string name="ui_return_to_previous_position">Return to previous position</string>
    <string name="ui_next_chapter">Next chapter</string>
    <string name="ui_look_up">Look up</string>
    <string name="ui_table_of_contents">Table of Contents</string>
    <string name="ui_options">Options</string>
    <string name="ui_no_annotations_yet">No annotations yet.</string>
    <string name="ui_close_footnote">Close footnote</string>
    <string name="ui_skip_guided_panels_on_this_page">Skip guided panels on this page</string>

    <!-- Annotation actions sheet -->
    <string name="ui_no_highlight_color">No highlight color</string>
    <string name="ui_selected_suffix">, selected</string>
    <string name="ui_highlight_suffix"> highlight</string>
...
